--- a/css/styles.css
+++ b/css/styles.css
@@ -114,7 +114,7 @@ margin-right: auto;
   color 0.4s ease,
   background-color 0.4s ease,
   border-color 0.4s ease,
-  opacity 0.4s ease
+  opacity 0.4s ease;
 }
 
 .button:hover {
